; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_stdlg.c_SetTaskbarProgressState.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_stdlg.c_SetTaskbarProgressState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ptbl = common dso_local global i32* null, align 8
@FALSE = common dso_local global i32 0, align 4
@hMainDialog = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetTaskbarProgressState(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32*, i32** @ptbl, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @FALSE, align 4
  store i32 %7, i32* %2, align 4
  br label %17

8:                                                ; preds = %1
  %9 = load i32*, i32** @ptbl, align 8
  %10 = load i32, i32* @hMainDialog, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @ITaskbarList3_SetProgressState(i32* %9, i32 %10, i32 %11)
  %13 = call i32 @FAILED(i32 %12)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %8, %6
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @FAILED(i32) #1

declare dso_local i32 @ITaskbarList3_SetProgressState(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
